[package]
name = "async-shutdown"
description = "one-stop solution for async graceful shutdown"
version = "0.2.2"
license = "BSD-2-Clause OR Apache-2.0"
repository = "https://github.com/de-vri-es/async-shutdown-rs"
readme = "README.md"
documentation = "https://docs.rs/async-shutdown"

keywords = ["async", "shutdown", "graceful", "graceful-shutdown"]
categories = ["asynchronous"]

edition = "2018"

[features]
default = ["multi-thread"]
multi-thread = ["tokio/rt-multi-thread"]

[[example]]
name = "tcp-echo-server"
required-features = ["multi-thread"]

[dev-dependencies]
assert2 = "0.3.4"
tokio = { version = "1.12.0", features = ["io-util", "macros", "net", "rt", "signal", "time"] }
futures = "0.3.17"
